# cpp-agent

./: .gitignore  CMakeLists.txt  QueryLoop_多轮修正方案.md  README.md  _dirlist.txt  debug-jianlai-runner-loop.md  debug-runner-closure.md  debug-stream-response-stall.md  diff.md  fix_command.patch  program.md
.dbg/: jianlai-graph-prompt.txt  real-runner-prompt-short.txt  real-runner-prompt.txt  runner-closure-debug.ndjson  runner_closure_server.py  smoke-prompt.txt  stream-response-stall.env  trae-debug-log-stream-response-stall.ndjson
.dbg/session_post_fix/: snapshot.pb  snapshot.txt
.dbg/session_qwen_only/: snapshot.pb  snapshot.txt  transcript.jsonl  transcript.txt
.dbg/session_qwen_only_clean/: snapshot.pb  snapshot.txt  transcript.jsonl
.dbg/session_qwen_only_fix/: snapshot.pb  snapshot.txt  transcript.jsonl
docs/: ARCHITECTURE_ANALYSIS.md
src/agents/: SubAgentManager.cpp  SubAgentManager.h  SubAgentWorkerMain.cpp  SubAgentWorkerProtocol.cpp  SubAgentWorkerProtocol.h
src/api/: CostTracker.cpp  CostTracker.h  ModelClient.cpp  ModelClient.h  SideQueryClient.cpp  SideQueryClient.h
src/app/: RuntimePolicy.cpp  RuntimePolicy.h  TuiTaskPanel.cpp  TuiTaskPanel.h  main.cpp
src/core/: AgentTypes.h  QueryEngine.cpp  QueryEngine.h  QueryLoop.cpp  QueryLoop.h  StateTypes.cpp  StateTypes.h  StreamingToolExecutor.cpp  StreamingToolExecutor.h  helpers_insert.cpp
src/hooks/: HookConfig.cpp  HookConfig.h  HookExecutor.cpp  HookExecutor.h  HookTypes.h
src/infra/: ProcessRunner.cpp  ProcessRunner.h  ProtoLite.cpp  ProtoLite.h  SessionManager.cpp  SessionManager.h  StabilityWatchdog.cpp  StabilityWatchdog.h
src/mcp/: McpClientManager.cpp  McpClientManager.h
src/memory/: AutoDream.cpp  AutoDream.h  MemoryIndex.cpp  MemoryIndex.h  MemoryScanner.cpp  MemoryScanner.h
src/permissions/: BashClassifier.cpp  BashClassifier.h  PermissionEngine.cpp  PermissionEngine.h
src/tools/: ToolOrchestrator.cpp  ToolOrchestrator.h  ToolRegistry.cpp  ToolRegistry.h
tests/integration/: benchmark_runner.cpp  gemma_validator_benchmark.cpp  model_stream_smoke_runner.cpp  real_project_runner.cpp  test_e2e.cpp
tests/unit/: smoke.cpp  test_classifier.cpp  test_comprehensive.cpp  test_core.cpp  test_hooks.cpp  test_infra.cpp  test_mcp.cpp  test_memory.cpp  test_subagent.cpp  test_tools.cpp
